# genmc

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Config.cpp  Config.hpp  DeclareAssumePass.hpp  Dockerfile  Driver.cpp  Event.cpp  Event.hpp  Execution.cpp  ExecutionGraph.cpp  ExternalFunctions.cpp  Interpreter.cpp  Interpreter.h  LLVMLICENSE  LLVMModule.cpp  LLVMModule.hpp  LoopUnrollPass.cpp  Makefile  Makefile.am  Parser.cpp  README.md  SpinAssumePass.cpp  SpinAssumePass.hpp  Thread.cpp  Thread.hpp  config.h.in  configure.ac  export-github-patch.sh  main.cpp  roll-a-release.sh
benchmarks/: CoA.litmus  CoRR.litmus  CoRW.litmus  CoWR.litmus  benchmarks.sh  big0.litmus  binc.litmus  compare-ocaml.sh  get-table-data.sh  plot.plg  rc11.cat  (+2 more)
doc/: CMakeLists.txt  Doxyfile.in  development.md  manual.html  manual.org
kater/src/: BasicPredicates.hpp  CNFAs.hpp  Config.cpp  Config.hpp  Constraint.cpp  Constraint.hpp  Counterexample.cpp  Counterexample.hpp  Driver.cpp  Driver.hpp  Error.hpp  Inclusion.hpp  KatModule.cpp  KatModule.hpp  KatModuleAPI.hpp  Kater.cpp  Kater.hpp  Lexer.lpp  Makefile.am  NFA.cpp  NFA.hpp  Parser.ypp  ParsingDriver.cpp  ParsingDriver.hpp  Predicate.cpp  Predicate.hpp  Printer.cpp  Printer.hpp  RegExp.cpp  RegExp.hpp  Relation.cpp  Relation.hpp  Saturation.cpp  Saturation.hpp  TransLabel.cpp  TransLabel.hpp  Utils.cpp  Utils.hpp  Visitor.hpp  main.cpp
src/: ARCalculator.cpp  ARCalculator.hpp  ASize.cpp  ASize.hpp  AdjList.hpp  AdjList.tcc  AnnotExpr.cpp  AnnotExpr.hpp  BisimilarityCheckerPass.cpp  BisimilarityCheckerPass.hpp  Bitmask.hpp  CMakeLists.txt  Calculator.cpp  Calculator.hpp  CallInfoCollectionPass.cpp  CallInfoCollectionPass.hpp  CodeCondenserPass.cpp  CoherenceCalculator.cpp  CoherenceCalculator.hpp  Config.cpp  Config.hpp  ConfirmationAnnotationPass.cpp  DeclareAssumePass.cpp  DeclareEndLoopPass.cpp  DeclareEndLoopPass.hpp  DeclareInternalsPass.cpp  DeclareSpinStartPass.cpp  DeclareSpinStartPass.hpp  DeclareStartLoopPass.cpp  DeclareStartLoopPass.hpp  DefineLibcFunsPass.cpp  DefineLibcFunsPass.hpp  DepExecutionGraph.cpp  DepExecutionGraph.hpp  DepInfo.cpp  DepInfo.hpp  DepTracker.hpp  DepView.cpp  DepView.hpp  Driver.cpp  (+181 more)
src/ADT/: AdjList.hpp  Bitmask.hpp  DepView.cpp  DepView.hpp  Matrix2D.hpp  Matrix2D.tcc  Trie.hpp  VSet.hpp  VSet.tcc  VectorClock.cpp  VectorClock.hpp  View.cpp  View.hpp  value_ptr.hpp
src/Config/: Config.cpp  Config.hpp  MemoryModel.hpp  Verbosity.cpp  Verbosity.hpp
src/ExecutionGraph/: DepExecutionGraph.cpp  DepExecutionGraph.hpp  DepInfo.cpp  DepInfo.hpp  Event.cpp  Event.hpp  EventAttr.hpp  EventLabel.cpp  EventLabel.def  EventLabel.hpp  ExecutionGraph.cpp  ExecutionGraph.hpp  GraphIterators.hpp  GraphUtils.cpp  GraphUtils.hpp  LabelVisitor.hpp  LoadAnnotation.hpp  MaximalIterator.hpp  Stamp.cpp  Stamp.hpp
src/ExecutionGraph/Consistency/: BoundDecider.cpp  BoundDecider.hpp  ConsistencyChecker.cpp  ConsistencyChecker.hpp  ContextBoundDecider.cpp  ContextBoundDecider.hpp  IMMChecker.cpp  IMMChecker.hpp  RAChecker.cpp  RAChecker.hpp  RC11Checker.cpp  RC11Checker.hpp  RoundBoundDecider.cpp  RoundBoundDecider.hpp  SCChecker.cpp  SCChecker.hpp  SymmetryChecker.cpp  SymmetryChecker.hpp  TSOChecker.cpp  TSOChecker.hpp
src/Runtime/: DepTracker.hpp  Execution.cpp  ExternalFunctions.cpp  InternalFunction.def  Interpreter.cpp  Interpreter.h  InterpreterEnumAPI.cpp  InterpreterEnumAPI.hpp  LLIConfig.hpp
src/Static/: LLVMModule.cpp  LLVMModule.hpp  LLVMUtils.cpp  LLVMUtils.hpp  ModuleID.hpp  ModuleInfo.cpp  ModuleInfo.hpp
src/Static/Transforms/: BarrierResultCheckerPass.cpp  BarrierResultCheckerPass.hpp  BisimilarityCheckerPass.cpp  BisimilarityCheckerPass.hpp  CallInfoCollectionPass.cpp  CallInfoCollectionPass.hpp  CodeCondenserPass.cpp  CodeCondenserPass.hpp  ConfirmationAnnotationPass.cpp  ConfirmationAnnotationPass.hpp  DeclareInternalsPass.cpp  DeclareInternalsPass.hpp  DefineLibcFunsPass.cpp  DefineLibcFunsPass.hpp  EliminateAnnotationsPass.cpp  EliminateAnnotationsPass.hpp  EliminateCASPHIsPass.cpp  EliminateCASPHIsPass.hpp  EliminateCastsPass.cpp  EliminateCastsPass.hpp  EliminateRedundantInstPass.cpp  EliminateRedundantInstPass.hpp  EliminateUnusedCodePass.cpp  EliminateUnusedCodePass.hpp  EscapeCheckerPass.cpp  EscapeCheckerPass.hpp  FunctionInlinerPass.cpp  FunctionInlinerPass.hpp  InstAnnotator.cpp  InstAnnotator.hpp  IntrinsicLoweringPass.cpp  IntrinsicLoweringPass.hpp  LoadAnnotationPass.cpp  LoadAnnotationPass.hpp  LocalSimplifyCFGPass.cpp  LocalSimplifyCFGPass.hpp  LoopJumpThreadingPass.cpp  LoopJumpThreadingPass.hpp  LoopUnrollPass.cpp  LoopUnrollPass.hpp  (+12 more)
src/Support/: ASize.cpp  ASize.hpp  DotPrint.hpp  Error.hpp  Hash.hpp  Logger.hpp  MemAccess.hpp  MemOrdering.cpp  MemOrdering.hpp  NameInfo.cpp  NameInfo.hpp  Parser.cpp  Parser.hpp  RMWOps.hpp  ResultHandling.cpp  ResultHandling.hpp  SAddr.cpp  SAddr.hpp  SAddrAllocator.cpp  SAddrAllocator.hpp  SExpr.hpp  SExprVisitor.hpp  SVal.cpp  SVal.hpp  ThreadInfo.hpp  ThreadPinner.cpp  ThreadPinner.hpp  ThreadPool.cpp  ThreadPool.hpp  Verbosity.hpp
src/Verification/: ChoiceMap.cpp  ChoiceMap.hpp  Config.cpp  Config.hpp  DriverFactory.hpp  DriverHandlerDispatcher.hpp  GenMCDriver.cpp  GenMCDriver.hpp  InterpreterCallbacks.hpp  Revisit.cpp  Revisit.hpp  Scheduler.cpp  Scheduler.hpp  VerificationError.cpp  VerificationError.hpp  VerificationResult.hpp  WorkList.cpp  WorkList.hpp  WorkSet.cpp  WorkSet.hpp
src/Verification/Consistency/: ConsistencyChecker.hpp  ContextBoundDecider.cpp  ContextBoundDecider.hpp  IMMChecker.cpp  IMMChecker.hpp  IMMDriver.cpp  IMMDriver.hpp  RAChecker.cpp  RAChecker.hpp  RADriver.cpp  RADriver.hpp  RC11Checker.cpp  RC11Checker.hpp  RC11Driver.cpp  RC11Driver.hpp  RoundBoundDecider.hpp  SCChecker.cpp  SCChecker.hpp  SCDriver.cpp  SCDriver.hpp  TSOChecker.cpp  TSOChecker.hpp  TSODriver.cpp  TSODriver.hpp
src/Verification/Relinche/: LinearizabilityChecker.cpp  LinearizabilityChecker.hpp  Linearization.cpp  Linearization.hpp  Observation.cpp  Observation.hpp  Specification.cpp  Specification.hpp
(+1483 files in other folders)
